# rust-vcpkg-staticlink-demo

./: Cargo.toml  README.md  build.rs  run.bat  run.sh
src/: bindings.c  bindings.h  main.rs
